# TwinklebearDev-Lessons

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  TwinklebearDev-Lessons.sln  asset.h.in
Lesson 8/: Lesson 8.vcxproj  Lesson 8.vcxproj.filters
Lesson 8/src/: main.cpp  timer.cpp
Lesson0/: CMakeLists.txt  Lesson0.vcxproj
Lesson0/Makefiles/: README.txt
Lesson0/Makefiles/linux_gcc/: Makefile
Lesson0/Makefiles/mac_clang/: .Makefile.swp  Makefile
Lesson0/Makefiles/mingw/: Makefile
Lesson0/src/: main.cpp
Lesson1/: CMakeLists.txt  Lesson1.vcxproj
Lesson1/Makefiles/linux_gcc/: Makefile
Lesson1/Makefiles/mac_clang/: Makefile
Lesson1/src/: main.cpp
Lesson2/: CMakeLists.txt  Lesson2.vcxproj
Lesson2/src/: main.cpp
Lesson3/: CMakeLists.txt  Lesson3.vcxproj
Lesson3/src/: main.cpp
Lesson4/: CMakeLists.txt  Lesson4.vcxproj
Lesson4/Makefiles/: README.txt
Lesson4/src/: main.cpp
Lesson5/: CMakeLists.txt  Lesson5.vcxproj
Lesson5/src/: main.cpp
Lesson6/: CMakeLists.txt  Lesson6.vcxproj
Lesson6/src/: main.cpp  window.cpp  window.h
Lesson7/: Lesson7.vcxproj  Lesson7.vcxproj.filters
Lesson7/include/: window.h
Lesson7/src/: main.cpp  window.cpp  window.h
Lesson8/: Lesson8.vcxproj  Lesson8.vcxproj.filters
Lesson8/include/: window.h
Lesson8/src/: main.cpp  timer.cpp  timer.h  window.cpp
TwinklebearDev-Lessons/: TwinklebearDev-Lessons.sdf  TwinklebearDev-Lessons.sln
TwinklebearDev-Lessons/Lesson0/: Lesson0.vcxproj
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake
include/: cleanup.h  res_path.h
(+24 files in other folders)
